Cleanup + (maybe) optimize some stuff